# playwright-google-rnd

./: .gitignore  README.md  pyproject.toml  simple_search.py
scripts/: google_search.py  saved_session_search.py  simple_search.py
server/: main.py
server/core/: config.py
server/models/: __init__.py  job.py  search.py
server/routers/: __init__.py  job_router.py  search_router.py
server/scrapers/: google_session_scraper.py  google_simple_scraper.py
server/services/: __init__.py  job_service.py  search_service.py
server/utils/: file_handler.py
