[project]
name = "playwright-google-rnd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "nest-asyncio>=1.6.0",
    "playwright>=1.55.0",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
]
